<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_900"
    app:layoutDescription="@xml/fragment_account_info_scene"
    tools:context=".fragments.AccountInfo">
    <View
        android:id="@+id/account_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:alpha="0"
        android:background="@color/yellow_700"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/account_ic"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:srcCompat="@drawable/ic_account"
        app:altSrc="@drawable/account_ic_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/the_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Osama Salem"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_ic" />
    <EditText
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="8dp"
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/the_name"
        android:background="@drawable/log_in_input"
        android:textColorHint="#222222"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:hint="@string/the_name"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="32dp"
        android:paddingHorizontal="12dp"
        android:autofillHints="@string/the_name"
        android:inputType="textPersonName|textNoSuggestions" />
    <EditText
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="8dp"
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_edit"
        android:background="@drawable/log_in_input"
        android:textColorHint="#222222"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:hint="@string/surname"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        android:paddingHorizontal="12dp"
        android:autofillHints="@string/surname"
        android:inputType="textPersonName|textNoSuggestions" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/the_country"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:drawableStart="@drawable/ic_origin"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/surname"
        android:background="@drawable/button_style"
        android:textColor="#222222"
        android:fontFamily="casual"
        app:backgroundTint="@color/white"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/origin"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        android:paddingHorizontal="12dp"
        android:colorAccent="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/the_birthday"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:drawableStart="@drawable/ic_birthday"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/the_country"
        android:background="@drawable/log_in_input"
        app:backgroundTint="@color/white"
        android:textColor="#222222"
        android:fontFamily="casual"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/birthday"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        android:paddingHorizontal="12dp"/>
    <EditText
        android:drawableStart="@drawable/ic_money"
        android:drawablePadding="8dp"
        android:id="@+id/the_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/the_birthday"
        android:background="@drawable/log_in_input"
        android:textColorHint="#222222"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:hint="@string/the_salary"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        android:paddingHorizontal="12dp"
        android:autofillHints="@string/the_name"
        android:inputType="number|numberDecimal" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginHorizontal="12dp"
        app:backgroundTint="@color/yellow_700"
        android:text="@string/save"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:layout_marginVertical="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        app:layout_constraintTop_toBottomOf="@id/the_salary"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.motion.widget.MotionLayout>