<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context="fragments.AddOtherCategory">

    <ImageView
        android:id="@+id/category_ic"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_category"
        app:tint="@color/blue_900" />

    <TextView
        android:id="@+id/add_category_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/add_a_new_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/category_ic" />

    <EditText
        android:id="@+id/add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="64dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/add_category"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_category"
        android:drawablePadding="12dp"
        android:fontFamily="casual"
        android:hint="@string/add_category"
        android:inputType="textPersonName|textNoSuggestions"
        android:padding="12dp"
        android:textColor="@color/blue_900"
        android:textColorHint="@color/blue_900"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow_700"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_category_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/button_style_focused"
        android:fontFamily="casual"
        android:text="@string/ok"
        android:textColor="@color/yellow_700"
        android:textStyle="bold"
        app:backgroundTint="@color/blue_900"
        app:layout_constraintTop_toBottomOf="@id/add_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>