<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expenses_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:backgroundTint="#E1DFDF"
    android:layout_margin="12dp"
    tools:context=".recyclerView.details.ExpensesDate">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_900"
    android:alpha="0.9"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingVertical="4dp"
        android:paddingEnd="12dp"
        android:paddingStart="4dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/date_ic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:paddingTop="4dp"
            android:src="@drawable/ic_today"
            android:contentDescription="@string/date" />
        <ImageView
            android:id="@+id/category_ic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:paddingTop="4dp"
            tools:src="@drawable/ic_category"
            android:contentDescription="@string/expense_type" />
        <ImageView
            android:id="@+id/money_ic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:paddingTop="4dp"
            android:src="@drawable/ic_money"
            android:contentDescription="@string/expense_cost"
            app:tint="@color/yellow_700" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:fontFamily="casual"
            android:paddingTop="4dp"
            android:textColor="@color/white"
            tools:text="20/11/2006" />
    <TextView
        android:id="@+id/category"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_width="wrap_content"
        android:paddingTop="4dp"
        tools:text="label"
        android:fontFamily="casual"
        android:textColor="@color/white"
        style="@style/TextAppearance.AppCompat.Large"/>
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:paddingTop="4dp"
            android:fontFamily="casual"
            android:textColor="@color/white"
            tools:text="200"
            style="@style/TextAppearance.AppCompat.Large"/>
</LinearLayout>
</LinearLayout>
</com.google.android.material.card.MaterialCardView>